--- a/css/index.css
+++ b/css/index.css
@@ -219,9 +219,17 @@ color: darkgray;
     height: 80%;
     width: 80%; 
 }
+
+#sect6{
+    margin: 0;
+    padding: 0;
+    margin-top: -34.7px;
+}
 .lon{
     height: 100px;
     background-color: #f9f9fa;
+    margin: 0;
+    padding: 0;
     
 }
 .lon a{
@@ -234,6 +242,97 @@ color: darkgray;
     width:150px;
     
     margin:0 auto;
-    padding: 20px;
+    padding: 40px;
     margin-top: 35px !important;
+    display: block;
+}
+
+#sect7{
+    height: 800px;
+    background-color:#dad7d2 ;
+    margin: 0;
+    
+}
+.sec7 p{
+    width: 600px;
+    font-size: 18px;
+margin-left: auto;
+margin-right: auto;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', ;
+color: whitesmoke;
+}
+.sec7 h1{
+    margin-top: 0;
+    padding-top: 60px;
+    margin-left: 40%;
+   
+}
+.secc7{
+    height: 500px;
+    width: 70%;
+    background-image: url(../img/suke-tran-462029-unsplash.jpg);
+    background-size: cover;
+    margin: 0 auto;
+    margin-top: 50px !important;
+    
+}
+.secc7 button{
+    
+    height:60px ;
+    width: 60px;
+    background-color: blue;
+    margin-top: 200px;
+    margin-left: 440px;
+    visibility: visible;
+    border-radius: 60px;
+    border-color: blue;
+
+}
+.secc7 button i{
+    font-size: 40px;
+    margin-top:-2px;
+    margin-left: 0px;
+    color: aliceblue;
+}
+
+#sect8{
+    height: 600px;
+    background-color: #f9f9fa;
+}
+.col11{
+    width: 25%;
+    height: 300px;
+    background-color: #f9f9fa;
+    display: inline-block;
+    margin-right: -4px;
+    background-size: cover;
+}
+.col11 i{
+    margin-top: 0;
+    font-size: 40px;
+    margin-left: 40%;
+    
+}
+.col111{
+    width: 80%;
+    margin: 0 auto;
+    ;
+;
+    }
+.row{
+    width: 80%;
+    margin: 0 auto;
+    
+    height: 80%;
+    margin-top: 10% !important;
+    
+}
+.col11 h3{
+text-align: center;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.col11 p{
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: wheat;
 }
